[package]
name = "block_peers"
version = "0.1.0"
authors = ["Adam Sheehan <a.t.sheehan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.32", features = ["image", "unsafe_textures"] }
log = "0.4.8"
simplelog = "^0.7.3"
rand = "0.7.2"
