[package]
name = "block_peers"
version = "0.1.0"
authors = ["Adam Sheehan <a.t.sheehan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2"
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
simplelog = "^0.7.3"
rand = "0.7.2"
getopts = "0.2"
lazy_static = "1.4.0"
flate2 = "1.0.12"
async-std = "^1.0"

[dependencies.sdl2]
version = "0.32"
features = ["image", "unsafe_textures", "ttf", "mixer", "use_mac_framework"]
